create transaction view to show result by code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,11 @@
       app:layout_constraintTop_toTopOf="parent"
       android:layout_margin="32dp" />
 
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      tools:context=".MainActivity"
+      android:id="@+id/fragmentContainer">
+  </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
