--- a/app/src/main/res/layout/adapter_transaction.xml
+++ b/app/src/main/res/layout/adapter_transaction.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="4dp"
     android:textColor="@color/white"
+    android:layout_marginBottom="12dp"
     tools:text="Z453">
 
 </TextView>
