--- a/app/src/main/res/layout/adapter_transaction_quantity.xml
+++ b/app/src/main/res/layout/adapter_transaction_quantity.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="4dp"
+    android:layout_marginBottom="12dp">
+
+  <TextView
+      android:id="@+id/code"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_marginStart="12dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      tools:text="Z453"/>
+
+  <TextView
+      android:id="@+id/quantity"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:gravity="end"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintEnd_toStartOf="@id/currency"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      tools:text="2.4"/>
+
+  <TextView
+      android:id="@+id/currency"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_marginEnd="12dp"
+      android:gravity="end"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      tools:text="EUR"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
