show error toast. Show rounded amount

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,14 @@
       app:layout_constraintTop_toTopOf="parent"
       android:layout_margin="32dp" />
 
-  <FrameLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      tools:context=".MainActivity"
-      android:id="@+id/fragmentContainer">
-  </FrameLayout>
+  <ProgressBar
+      android:id="@+id/loader"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
